clean before publishing

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "compile": "babel -d lib/ src",
     "test": "mocha --compilers js:babel-register",
     "build": "npm run compile",
-    "prepublish": "npm run build"
+    "clean": "rm -rf lib/",
+    "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
